Made numerous optimizations and bug fixes. Added a footer section and ensured proper alignment for links and logo. Added a recent books section with flex-wrap adjustments.

--- a/style.css
+++ b/style.css
@@ -30,6 +30,20 @@ hr {
     min-height: 600px;
 }
 
+/* CONTAINERS */
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 16px;
+}
+
+.row {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
 /* NAV */
 .nav {
     width: 100%;
@@ -277,7 +291,7 @@ button:active {
     align-items: center;
 }
 
-.book:hover .book__img {
+.book:hover, .recent__book:hover .book__img {
     transform: scale(1.03);
 }
 
@@ -308,16 +322,93 @@ button:active {
     text-align: center;
 }
 
-/* CONTAINERS */
+/* RECENT BOOKS */
 
-.container {
+.recent__books {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 24px;
     max-width: 1200px;
     margin: 0 auto;
-    padding: 0 16px;
 }
 
-.row {
+.recent__book {
+    width: calc(25% - 24px);
+    padding: 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-width: 200px;
+    max-width: 280px;
+    flex-shrink: 0;
+    flex-grow: 0;
+}
+
+/* FOOTER */
+
+.footer {
+    width: 100%;
+    height: 220px;
+    display: flex;
+    background-color: #2C2F33;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer__container {
     width: 100%;
     max-width: 1200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     margin: 0 auto;
+    padding: 24px 0;
+    text-align: center;
+}
+
+.footer__row {
+    width: 100%;
+    max-width: 1200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    padding: 0 24px;
+}
+
+.footer__links {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+    padding-top: 12px;
+}
+
+.footer__links ul {
+    display: flex;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.footer__link {
+    text-decoration: none;
+    font-size: 20px;
+    font-weight: bold;
+    color: #B0B5BF;
+    padding: 4px 12px;
+    transition: color 300ms ease-in-out;
+}
+
+.footer__link:hover {
+    color: #E4E6EB;
+}
+
+.footer__logo {
+    width: 160px;
+    margin-bottom: 12px;
 }
